# rust-record

./: .editorconfig  .gitignore  README.md
cli/crypto/: Cargo.toml  README.md
cli/crypto/src/: main.rs
cli/file-append-newline/: Cargo.toml  README.md
cli/file-append-newline/src/: config.rs  main.rs
cli/grep/src/: lib.rs  main.rs
cli/time/: Cargo.toml
cli/time/src/: lib.rs  main.rs
crypto/: Cargo.toml
crypto/src/: main.rs
file-append-newline/: Cargo.toml  config.toml
grep/: Cargo.toml  text.txt
grep/src/: lib.rs  main.rs
qrcode/: Cargo.toml
test/actix-web/: .env  Cargo.toml
test/actix-web/config/: log4rs.yaml  public.sql
test/actix-web/src/: main.rs
test/actix-web/src/handler/: mod.rs  user.rs
test/example/: Cargo.toml
test/example/tests/: bit.rs  closure.rs  error.rs  thread.rs
test/qrcode/: Cargo.toml
test/qrcode/src/: main.rs
test/tonic/: Cargo.toml  README.md  build.rs
test/tonic/proto/: echo.proto
test/tonic/src/: client.rs  proto.rs  server.rs
test/wasm-bindgen/: Cargo.toml  README.md  index.html
test/wasm-bindgen/src/: lib.rs
test/yew/: Cargo.toml  index.html
test/yew/src/: main.rs
time/: Cargo.toml  README.md
yew/: Cargo.toml
yew/src/: main.rs
