[package]
name = "actix-web-record"
version = "0.1.0"
authors = ["Li Lei <this.lilei@gmail.com>"]
edition = "2021"

[dependencies]
serde = "1.0.136"
actix-web = "4.0.1"
dotenv = "0.15.0"
log = "0.4.16"
log4rs = "1.0.0"

[dependencies.sqlx]
version = "0.5.11"
features = [
    "postgres",
    "runtime-actix-rustls"
]
